<resources>
    <string name="app_name">Job Search</string>
    <string name="title_activity_applicant_view_pager">ApplicantViewPagerActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="job_listing">Job Listing</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="main_menu_tabs">MAIN MENU TABS</string>
    <string name="app_logo">APP LOGO</string>
    <string name="welcome">Welcome!</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="employer">Employer</string>

    <!-- loading dialog text -->
    <string name="loading_user">Loading User</string>
    <string name="loading_job_listing">Loading Job Listing</string>

    <string name="please_wait">Please Wait</string>
    <string name="applicant_search">Applicant Search</string>
    <string name="create_job_listing">Create Job Listing</string>
    <string name="submit">Submit</string>
    <string name="full_time">Full Time</string>
    <string name="part_time">Part-Time</string>
    <string name="full_description">Full Description</string>
    <string name="listing_title">Listing Title</string>
    <string name="title_activity_applicant_search">ApplicantSearchActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="sign_out">Sign Out</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="edit_profile_details">Edit Profile Details</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="updating_applicant_data">Updating Applicant Data</string>
    <string name="updating_profile_picture">Updating Profile Picture</string>
    <string name="job_title_1">Job Title 1</string>
    <string name="job_location_1">Job Location 1</string>
    <string name="job_description_1">Job Description 1</string>
    <string name="search_job_listing_hint_1">Search job listing (Ex. Android developer in Metro Manila, Philippines</string>
    <string name="search_job_listing">Search Job Listing</string>
    <string name="updating_employer_data">Updating Employer Data</string>
    <string name="job_description_sample">We are seeking a skilled and experienced software engineer to join our dynamic team. The successful candidate will be responsible for designing, developing, and maintaining high-quality software solutions that meet the needs of our clients. As a software engineer, you will work closely with our project managers, developers, and quality assurance team to ensure that our software solutions are delivered on time and meet our clients\' requirements.</string>
    <string name="job_company_1">Job Company 1</string>
    <string name="job_listing_for">Job Listing for:</string>
    <string name="search_sample_1">Android developer in Texas, USA</string>
    <string name="job_description_label">Job Description:</string>
    <string name="job_publisher_label">Job Publisher:</string>
    <string name="job_publisher_1">Job Publisher 1</string>
    <string name="employment_type_label">Employment Type:</string>
    <string name="fulltime">FULLTIME</string>
    <string name="apply_now">Apply Now</string>
    <string name="applicant_list">Applicant List</string>
    <string name="post_job_listing">Post Job Listing</string>
    <string name="john_smith">John Smith</string>
    <string name="user_key_skill_1">User Key Skill 1</string>
    <string name="sending_job_application">Sending Job Application</string>
    <string name="prev"><![CDATA[<<]]></string>
    <string name="nxt"><![CDATA[>>]]></string>
    <string name="featured_job_listing">Featured Job Listing</string>
    <string name="recently_applied_jobs">Recently Applied Jobs</string>
    <string name="refresh">Refresh</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="mobile_developer">Mobile Developer</string>
    <string name="city_province_country">City, Province, Country</string>
    <string name="search_query_example1">Ex. Android developer in Metro Manila, Philippines</string>
    <string name="send_application">Send Application</string>
    <string name="cancel">Cancel</string>
    <string name="apply_for_a_job">Apply for a Job</string>
    <string name="email">Email</string>
    <string name="sample_about1">I am a highly motivated software developer with 5 years of experience in mobile development. I have a strong background in Java and Kotlin and am always eager to learn new technologies and programming languages.</string>
    <string name="about">About</string>
    <string name="last_name">Last Name</string>
    <string name="smith">Smith</string>
    <string name="position_desired">Position Desired</string>
    <string name="android_developer">Android Developer</string>
    <string name="education">Education</string>
    <string name="education_2">Education 2</string>
    <string name="sample_education1">Bachelor of Science in Computer Science, XYZ University</string>
    <string name="education_3">Education 3</string>
    <string name="salary_in_php">Salary (in PHP)</string>
    <string name="skills_expertise">Skills/Expertise</string>
    <string name="sample_skills1">Java, Kotlin, Android SDK, SQL, Git</string>
    <string name="licenses_certifications">Licenses/Certifications</string>
    <string name="employment">Employment</string>
    <string name="sample_employment1">Software Developer, ABC Company (2016-2021)\nSenior Mobile Developer, DEF Inc. (2013-2016)</string>
    <string name="employment_2">Employment 2</string>
    <string name="update_profile">Update Profile</string>
    <string name="posted_at">Posted at:</string>
    <string name="sample_date">April 14,2023</string>
    <string name="apply_for_this_job">Apply For This Job</string>
    <string name="job_application_sent">Job Application Sent</string>
    <string name="status">Status:</string>
    <string name="select_file">Select File</string>
    <string name="app_settings">App Settings</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="education_add_comma_for_multiple_entries">Education (Add comma for multiple entries)</string>
    <string name="skills_expertise_add_comma_for_multiple_entries">Skills/Expertise (Add comma for multiple entries)</string>
</resources>