<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobApplicationActivity"
    android:padding="10dp"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll_job_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideOverlay"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/job_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_title_1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textColor="@android:color/holo_blue_dark"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/job_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_company_1"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@android:color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/job_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_location_1"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@android:color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/posted_at"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textColor="@android:color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/job_posted_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_date"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@android:color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/employment_type_label"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textColor="@android:color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/job_employment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fulltime"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@android:color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_publisher_label"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textColor="@android:color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/job_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_publisher_1"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@android:color/black"
                />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_description_label"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:textColor="@android:color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/job_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_description_sample"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@android:color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Status:"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/job_application_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Application Sent"
                    android:textSize="14sp"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>





        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/loading_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="gone"
        android:gravity="center">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_job_listing"
            />
    </LinearLayout>


</LinearLayout>