<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity"
    android:weightSum="10"
    android:padding="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/job_search_app_small"
        android:contentDescription="@string/app_logo"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_choose_account"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="Choose your account type:"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_jobseeker"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:text="@string/job_seeker"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_employer"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:text="@string/employer"
        android:layout_weight="1"/>




</LinearLayout>