<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/job_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_title_1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:textColor="@android:color/black"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/job_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_location_1"
        android:textSize="14sp"
        android:padding="8dp"
        android:textColor="@android:color/black"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/job_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_description_1"
        android:textSize="14sp"
        android:padding="8dp"
        android:textColor="@android:color/black"
        />

</LinearLayout>