<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".employer_viewpager.EmployerJobsFragment"
    android:padding="10dp"
    android:orientation="vertical"
    android:weightSum="10">

<!--    <androidx.appcompat.widget.AppCompatImageView-->
<!--        android:id="@+id/image"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:minHeight="150dp"-->
<!--        android:layout_weight="2"-->
<!--        android:src="@drawable/image_sample_placeholder"-->
<!--        android:layout_marginVertical="5dp"-->

<!--        />-->



    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_job_listing"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/listing_title"
        android:layout_marginVertical="5dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/listing_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textCapWords"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/full_description"
        android:layout_marginVertical="5dp"
        android:layout_weight="7.5"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:gravity="top"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:id="@+id/spin_contract_type"
        android:entries="@array/contract_type_options"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit"
        android:background="@drawable/round_button"
        />


</LinearLayout>